--- a/index.html
+++ b/index.html
@@ -1,60 +1,47 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8">
-  <title>رزومه | علی اکبرشاهی</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>سایت من</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>علی اکبرشاهی</h1>
+        <p>سلام من علی اکبزشاهی هستم دانشجوی رشته کامپیوتر دانشگاه آزاد اسلامی قزوین</p>
+    </header>
 
-  <nav>
-    <ul>
-      <li><a href="#home">خانه</a></li>
-      <li><a href="#about">درباره من</a></li>
-      <li><a href="#skills">مهارت‌ها</a></li>
-      <li><a href="#projects">پروژه‌ها</a></li>
-      <li><a href="#contact">تماس</a></li>
-    </ul>
-  </nav>
+    <nav>
+        <ul>
+            <li><a href="#about">درباره من</a></li>
+            <li><a href="#skills">مهارت‌ها</a></li>
+            <li><a href="#projects">پروژه‌ها</a></li>
+            <li><a href="#contact">تماس</a></li>
+        </ul>
+    </nav>
 
-  <section id="home" class="hero">
-    <h1>سلام، من علی اکبرشاهی هستم</h1>
-    <p>دانشجو و برنامه‌نویس وب</p>
-  </section>
+    <section id="about">
+        <h2>درباره من</h2>
+        <p>من دانشجوی رشته کامپیوتر هستم و علاقه مند به فعالیت در هوش مصنوعی و فناوری اطلاعات هستم</p>
+    </section>
 
-  <section id="about">
-    <h2>درباره من</h2>
-    <p>
-      من علاقه‌مند به برنامه‌نویسی وب هستم و در زمینه طراحی سایت و توسعه فرانت‌اند فعالیت می‌کنم.
-    </p>
-  </section>
+    <section id="skills">
+        <h2>مهارت‌ها</h2>
+        <ul>
+            <li>HTML & CSS</li>
+            <li>JavaScript</li>
+            <li>...</li>
+        </ul>
+    </section>
 
-  <section id="skills">
-    <h2>مهارت‌ها</h2>
-    <ul class="skills-list">
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-      <li>Git & GitHub</li>
-    </ul>
-  </section>
+    <section id="projects">
+        <h2>پروژه‌ها</h2>
+        <!-- عکس یا لینک پروژه‌ها -->
+    </section>
 
-  <section id="projects">
-    <h2>پروژه‌ها</h2>
-    <div class="project">
-      <h3>سایت رزومه شخصی</h3>
-      <p>طراحی و پیاده‌سازی سایت رزومه با HTML و CSS</p>
-    </div>
-  </section>
-
-  <section id="contact">
-    <h2>تماس با من</h2>
-    <p>ایمیل: <a href="mailto:example@email.com">example@email.com</a></p>
-  </section>
-
-  <footer>
-    <p>© 2025 علی اکبرشاهی</p>
-  </footer>
-
+    <footer id="contact">
+        <p>تماس: 09900218890</p>
+    </footer>
 </body>
 </html>
