--- a/index.html
+++ b/index.html
@@ -1,47 +1,186 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>سایت من</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>رزومه من</title>
+    <!-- لینک Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f8f9fa;
+        }
+        header {
+            background: #4a90e2;
+            color: white;
+            padding: 60px 0;
+            text-align: center;
+        }
+        footer {
+            background: #343a40;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>علی اکبرشاهی</h1>
-        <p>سلام من علی اکبزشاهی هستم دانشجوی رشته کامپیوتر دانشگاه آزاد اسلامی قزوین</p>
-    </header>
 
-    <nav>
-        <ul>
-            <li><a href="#about">درباره من</a></li>
-            <li><a href="#skills">مهارت‌ها</a></li>
-            <li><a href="#projects">پروژه‌ها</a></li>
-            <li><a href="#contact">تماس</a></li>
-        </ul>
-    </nav>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+  <div class="container">
+    <a class="navbar-brand" href="#">رزومه من</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="#about">درباره من</a></li>
+        <li class="nav-item"><a class="nav-link" href="#skills">مهارت‌ها</a></li>
+        <li class="nav-item"><a class="nav-link" href="#projects">پروژه‌ها</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">تماس</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-    <section id="about">
-        <h2>درباره من</h2>
-        <p>من دانشجوی رشته کامپیوتر هستم و علاقه مند به فعالیت در هوش مصنوعی و فناوری اطلاعات هستم</p>
-    </section>
+<!-- Header -->
+<header>
+    <h1>اسم شما</h1>
+    <p>توضیح کوتاه درباره خود</p>
+</header>
 
-    <section id="skills">
-        <h2>مهارت‌ها</h2>
-        <ul>
-            <li>HTML & CSS</li>
-            <li>JavaScript</li>
-            <li>...</li>
-        </ul>
-    </section>
+<!-- About Section -->
+<section id="about" class="container my-5">
+    <div class="row align-items-center">
+        <div class="col-md-6">
+            <h2>درباره من</h2>
+            <p>این قسمت می‌تواند شامل توضیحاتی درباره‌ی سابقه تحصیلی و حرفه‌ای شما باشد.</p>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#aboutModal">جزئیات بیشتر</button>
+        </div>
+        <div class="col-md-6">
+            <img src="https://via.placeholder.com/400x300" class="img-fluid rounded" alt="تصویر من">
+        </div>
+    </div>
+</section>
 
-    <section id="projects">
-        <h2>پروژه‌ها</h2>
-        <!-- عکس یا لینک پروژه‌ها -->
-    </section>
+<!-- Modal -->
+<div class="modal fade" id="aboutModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">درباره من - جزئیات بیشتر</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p>در اینجا می‌توانید اطلاعات بیشتر درباره تحصیلات، تجربه کاری و مهارت‌های خود اضافه کنید.</p>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">بستن</button>
+      </div>
+    </div>
+  </div>
+</div>
 
-    <footer id="contact">
-        <p>تماس: 09900218890</p>
-    </footer>
+<!-- Skills Section -->
+<section id="skills" class="container my-5">
+    <h2 class="mb-4">مهارت‌ها</h2>
+    <div class="row">
+        <div class="col-md-6 mb-3">
+            <h5>HTML & CSS</h5>
+            <div class="progress">
+                <div class="progress-bar bg-success" style="width: 90%;">90%</div>
+            </div>
+        </div>
+        <div class="col-md-6 mb-3">
+            <h5>JavaScript</h5>
+            <div class="progress">
+                <div class="progress-bar bg-info" style="width: 75%;">75%</div>
+            </div>
+        </div>
+        <div class="col-md-6 mb-3">
+            <h5>Bootstrap</h5>
+            <div class="progress">
+                <div class="progress-bar bg-warning" style="width: 80%;">80%</div>
+            </div>
+        </div>
+        <div class="col-md-6 mb-3">
+            <h5>React</h5>
+            <div class="progress">
+                <div class="progress-bar bg-danger" style="width: 60%;">60%</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Projects Section with Cards -->
+<section id="projects" class="container my-5">
+    <h2 class="mb-4">پروژه‌ها</h2>
+    <div class="row g-4">
+        <div class="col-md-4">
+            <div class="card h-100">
+                <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="پروژه 1">
+                <div class="card-body">
+                    <h5 class="card-title">پروژه 1</h5>
+                    <p class="card-text">توضیح کوتاه درباره پروژه 1</p>
+                    <a href="#" class="btn btn-primary">مشاهده</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card h-100">
+                <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="پروژه 2">
+                <div class="card-body">
+                    <h5 class="card-title">پروژه 2</h5>
+                    <p class="card-text">توضیح کوتاه درباره پروژه 2</p>
+                    <a href="#" class="btn btn-primary">مشاهده</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card h-100">
+                <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="پروژه 3">
+                <div class="card-body">
+                    <h5 class="card-title">پروژه 3</h5>
+                    <p class="card-text">توضیح کوتاه درباره پروژه 3</p>
+                    <a href="#" class="btn btn-primary">مشاهده</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Carousel Section -->
+<section class="container my-5">
+    <h2 class="mb-4 text-center">نمونه تصاویر</h2>
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="https://via.placeholder.com/800x400/ff7f7f" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="https://via.placeholder.com/800x400/7f7fff" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+</section>
+
+<!-- Contact / Footer -->
+<footer id="contact">
+    <p>ایمیل: example@example.com | تلفن: 09123456789</p>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
