--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
 <!-- Header -->
 <header>
-    <h1>اسم شما</h1>
-    <p>توضیح کوتاه درباره خود</p>
+    <h1>علی اکبرشاهی</h1>
+    <p>سلام من علی اکبرشاهی هستم دانشجوی رشته کامپیوتر دانشکاه آزاد اسلامی</p>
 </header>
 
 <!-- About Section -->
@@ -56,7 +56,7 @@
     <div class="row align-items-center">
         <div class="col-md-6">
             <h2>درباره من</h2>
-            <p>این قسمت می‌تواند شامل توضیحاتی درباره‌ی سابقه تحصیلی و حرفه‌ای شما باشد.</p>
+            <p>من دانشجوی رشته کامپیوتر هستم و در حال یادگیری اچ تی ام ال هستم و یه دوره پایتون را آموزش دیدم.</p>
             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#aboutModal">جزئیات بیشتر</button>
         </div>
         <div class="col-md-6">
@@ -122,8 +122,8 @@
             <div class="card h-100">
                 <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="پروژه 1">
                 <div class="card-body">
-                    <h5 class="card-title">پروژه 1</h5>
-                    <p class="card-text">توضیح کوتاه درباره پروژه 1</p>
+                    <h5 class="card-title">رمز وای فای</h5>
+                    <p class="card-text">رمز هر وای فای رو که سیستم به آن وصل شود را در خود ذخیره میکند و به ما میدهد1</p>
                     <a href="#" class="btn btn-primary">مشاهده</a>
                 </div>
             </div>
@@ -132,8 +132,8 @@
             <div class="card h-100">
                 <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="پروژه 2">
                 <div class="card-body">
-                    <h5 class="card-title">پروژه 2</h5>
-                    <p class="card-text">توضیح کوتاه درباره پروژه 2</p>
+                    <h5 class="card-title">ماشین حساب</h5>
+                    <p class="card-text">کدی در پایتون که ماشین حساب است</p>
                     <a href="#" class="btn btn-primary">مشاهده</a>
                 </div>
             </div>
